--- a/FINAL_VHDL_SCRIPTS/ctrl_box_config.ucf
+++ b/FINAL_VHDL_SCRIPTS/ctrl_box_config.ucf
@@ -34,3 +34,16 @@ NET "Led<4>" LOC = "N14";
 NET "Led<5>" LOC = "M13";
 NET "Led<6>" LOC = "P14";
 NET "Led<7>" LOC = "R16";
+
+
+NET "an<0>"  LOC = "G14";
+NET "an<1>"  LOC = "G12";
+NET "an<2>"  LOC = "G13";
+NET "an<3>"  LOC = "F12";
+NET "ssg<0>" LOC = "F13";
+NET "ssg<1>" LOC = "E13";
+NET "ssg<2>" LOC = "G15";
+NET "ssg<3>" LOC = "H13";
+NET "ssg<4>" LOC = "J14";
+NET "ssg<5>" LOC = "E14";
+NET "ssg<6>" LOC = "G16";
