Implemented SPI and IR_Decoder into top level

--- a/VHDL/config/spi_config.ucf
+++ b/VHDL/config/spi_config.ucf
@@ -1,11 +1,11 @@
 NET "clk" 	 LOC = "A8";
 
 NET "btn<0>" LOC = "J13";
-#NET "btn<1>" LOC = "K14";
-#NET "btn<2>" LOC = "K13";
-#NET "btn<3>" LOC = "K12";
+NET "btn<1>" LOC = "K14";
+NET "btn<2>" LOC = "K13";
+NET "btn<3>" LOC = "K12";
 NET "swt<0>" LOC = "N15";
-#NET "swt<1>" LOC = "J16";
+NET "swt<1>" LOC = "J16";
 #NET "swt<2>" LOC = "K16";
 #NET "swt<3>" LOC = "K15";
 #NET "swt<4>" LOC = "L15";
@@ -37,11 +37,16 @@ NET "led<7>" LOC = "R16";
 
 NET "ir"     LOC = "B4";
 
-#NET "led_reg_out<0>" LOC = "D15";
-#NET "led_reg_out<1>" LOC = "D16";
-#NET "led_reg_out<2>" LOC = "E15";
-#NET "led_reg_out<3>" LOC = "E16";
-#NET "led_reg_out<4>" LOC = "F14";
-#NET "led_reg_out<5>" LOC = "F15";
-#NET "led_reg_out<6>" LOC = "H15";
-#NET "led_reg_out<7>" LOC = "H16";
+NET "miso"   LOC = "C5";
+NET "mosi"	 LOC = "B5";
+NET "nCS"	 LOC = "D6";
+NET "sclk"	 LOC = "A4";
+
+NET "rx_data<0>" LOC = "D15";
+NET "rx_data<1>" LOC = "D16";
+NET "rx_data<2>" LOC = "E15";
+NET "rx_data<3>" LOC = "E16";
+NET "rx_data<4>" LOC = "F14";
+NET "rx_data<5>" LOC = "F15";
+NET "rx_data<6>" LOC = "H15";
+NET "rx_data<7>" LOC = "H16";
