--- a/FINAL_VHDL_SCRIPTS/config/ctrl_box_config.ucf
+++ b/FINAL_VHDL_SCRIPTS/config/ctrl_box_config.ucf
@@ -49,3 +49,10 @@ NET "ssg<5>" LOC = "E14";
 NET "ssg<6>" LOC = "G16";
 
 NET "speaker_audio" LOC = "T14";
+
+NET "ir"     LOC = "B4";
+
+NET "miso"   LOC = "C5";
+NET "mosi"	 LOC = "B5";
+NET "nCS"	 LOC = "D6";
+NET "sclk"	 LOC = "A4";
